# polygen

./: .gitignore  Cargo.toml  README.md
crates/polygen-core/: Cargo.toml
crates/polygen-private/: Cargo.toml
crates/polygen-private/src/: lib.rs
crates/polygen-proc/: Cargo.toml
examples/all-features/: Cargo.toml  templates
examples/all_features/: .gitignore  Cargo.toml  polygen
examples/complex-lib/: Cargo.toml
examples/simple-lib/: Cargo.toml
generators/: csharp.cs.rhai
generators/csharp/: process.rhai  render.rhai
generators/polygen-csharp/: Cargo.toml
generators/polygen-tera/: Cargo.toml
generators/polygen_csharp/: Cargo.toml
generators/utils/: utils.rhai
polygen-proc/: Cargo.toml
polygen-proc/src/: engine.rs  lib.rs  polyengine.rs
polygen-proc/src/engine/: functions.rs  script.rs
polygen-proc/src/items/: mod.rs  polyfield.rs  polyfunction.rs  polyimpl.rs  polystruct.rs  polytype.rs  utils.rs
polygen-proc/src/polyengine/: functions.rs  script.rs
polygen-proc/src/polyitems/: build.rs  error.rs  mod.rs  polyfn.rs  polyimpl.rs  polyitem.rs  polystruct.rs  polytype.rs
polygen-proc/src/process/: attr.rs  mod.rs  polyfn.rs  polyimpl.rs  polystruct.rs
src/: __private.rs  bag.rs  engine.rs  functions.rs  lib.rs  scripting.rs
src/__private/: mod.rs  polyfn.rs  polyimpl.rs  polystruct.rs  polytype.rs
src/builder/: builder.rs  mod.rs  polymap.rs  polystruct.rs  unsupported.rs
src/builder/types/: mod.rs  (+2 more)
src/items/: mod.rs  polyfn.rs  polyident.rs  polyimpl.rs  polystruct.rs  polytype.rs
src/types/: polystruct.rs  unsupported.rs
(+51 files in other folders)
