[package]
name = "polygen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
glob = "0.3"
heck = "0.4"
quote = "1.0"
indent = "0.1"
anyhow = "1.0"
syn-serde = "0.3"
thiserror = "1.0"
once_cell = "1.18"
syn = { version = "2.0", features = ["full"] }
rhai = { version = "1.15", features = ['sync', 'serde'] }
