[package]
name = "polygen-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
quote = "1.0"
regex = "1.9"
indent = "0.1"
thiserror = "1.0"
once_cell = "1.18"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full"] }
rhai = { version = "1.15", features = ['sync', 'serde'] }
